proguard, maven, open some members to write StAX-based parser